--- a/study.html
+++ b/study.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">  <!--    charset é um atributo de codificação do texto da página, suas propriedades etc -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Proffy | Sua plataforma de estudos online</title>
 
     <link rel="stylesheet" href="/styles/main.css">
+    <link rel="stylesheet" href="/styles/partials/header.css">
+    <link rel="stylesheet" href="/styles/partials/forms.css">
     <link rel="stylesheet" href="/styles/partials/page-study.css">
 
     <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&amp;family=Poppins:wght@400;600&amp;display=swap" rel="stylesheet">
